# sqlagent-docker

./: README.md  docker-compose.yml
sqlagent/: Dockerfile  pyproject.toml
sqlagent/sqlagent/: app.py  main.py
sqlagent/sqlagent/archive/: temp.ipynb
