[tool.poetry]
name = "sqlagent"
version = "0.1.0"
description = ""
authors = ["Suman Michael <sumanmichael01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.15"
langchain = "^0.1.20"
langchain-community = "^0.0.38"
langchain-openai = "^0.1.6"
langserve = {extras = ["all"], version = "^0.1.1"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
